--- a/client/CMakeLists.txt
+++ b/client/CMakeLists.txt
@@ -8,17 +8,21 @@ find_package(OpenCV REQUIRED)
 
 include_directories(${OpenCV_INCLUDE_DIRS})
 
-include_directories(${PROJECT_SOURCE_DIR}/src)
-include_directories("${PROJECT_SOURCE}/net/")
-
 set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/)
 
 include_directories("${PROJECT_SOURCE}/")
+include_directories("${PROJECT_SOURCE}/net/")
+include_directories("${PROJECT_SOURCE}/code/")
+include_directories("${PROJECT_SOURCE}/msg/")
 
 aux_source_directory(./ ROOT_SOURCE)
 aux_source_directory(./net/ NET_SOURCE)
+aux_source_directory(./code/ CODE_SOURCE)
+aux_source_directory(./msg/ MSG_SOURCE)
 
-add_executable(${PROJECT_NAME} main.cpp ${ROOT_SOURCE} ${NET_SOURCE})
+
+add_executable(${PROJECT_NAME} main.cpp ${ROOT_SOURCE} ${NET_SOURCE}
+                                        ${CODE_SOURCE} ${MSG_SOURCE})
 
 target_link_libraries(${PROJECT_NAME} pthread ${OpenCV_LIBS})
 
